Update part 2 and add instructor files for teaching demo

--- a/part2_df_manipulation/part2_intro.Rmd
+++ b/part2_df_manipulation/part2_intro.Rmd
@@ -4,11 +4,12 @@ subtitle: "Part 2 - Data Frame Manipulations"
 output: html_document
 ---
 
-_This is an R-markdown document. If run in RStudio, you will see code blocks appear with the option to run each one using the little "play button" on the top-right of each block. The output (including errors) will be printed below a block_
+*This is an R-markdown document. If run in RStudio, you will see code blocks appear with the option to run each one using the little "play button" on the top-right of each block. The output (including errors) will be printed below a block*
 
 Read the [session materials](README.md) for more background on the various functions and their use
 
 ## Make sure you have the following libraries installed
+
 ```{r setup, include=FALSE}
 library(knitr)
 library(readxl)
@@ -19,6 +20,7 @@ opts_chunk$set(echo = TRUE)
 #install.packages(c("tidyverse", "knitr"))
 
 ```
+
 If you get an error that libraries are not installed yet, un-comment the last line (remove the `#`), and run the code block again (you can re-comment once installed).
 
 # Exploring the data
@@ -31,16 +33,18 @@ Let's load in an Excel file (antiquities_act.xlsx) which is stored in the same f
 data <- read_excel("antiquities_act.xlsx")
 data
 ```
-_You will see a preview of the table when you run this block, but you can also look at it it by clicking the variable name 'data' in the Environment pane on the right of your screen_
+
+*You will see a preview of the table when you run this block, but you can also look at it it by clicking the variable name 'data' in the Environment pane on the right of your screen*
 
 ## Handy functions to learn more about the data
 
-The built-in function `colnames()` can list all the column names for you, and the `glimpse()` function from the `dplyr` package will give you a summary of each column 
+The built-in function `colnames()` can list all the column names for you, and the `glimpse()` function from the `dplyr` package will give you a summary of each column
 
 ```{r}
 colnames(data)
 glimpse(data)
 ```
+
 # Selecting columns - select()
 
 ## By name
@@ -49,9 +53,11 @@ glimpse(data)
 myData <- data |> select(c("current_name", "states", "year"))
 glimpse(myData)
 ```
-_Select the columns current_name, states and year_
 
-_Remember that in `dplyr` selecting columns using `select()` function does not require you to use a vector of quoted strings_
+*Select the columns current_name, states and year*
+
+*Remember that in `dplyr` selecting columns using `select()` function does not require you to use a vector of quoted strings*
+
 ```{r}
 myData <- data |> select(current_name, states, year)
 ```
@@ -62,18 +68,21 @@ myData <- data |> select(current_name, states, year)
 myData <- data |> select(1,2,7)
 glimpse(myData)
 ```
-_Select the 1st, 2nd and 7th column_
+
+*Select the 1st, 2nd and 7th column*
 
 ## Inverted
+
 ```{r}
 myData <- data |> select(-c(1,2,7))
 glimpse(myData)
 ```
-_Select all but the 1st, 2nd and seventh column. Note that in this case a vector is required to invert everything_
+
+*Select all but the 1st, 2nd and seventh column. Note that in this case a vector is required to invert everything*
 
 ### Try it yourself
 
-_Use the same `data` variable for all exercises. You can save to whichever variable you like and check with glimpse()_
+*Use the same `data` variable for all exercises. You can save to whichever variable you like and check with glimpse()*
 
 #### Select the current agency and the the number of acres affected from the dataset
 
@@ -82,16 +91,18 @@ _Use the same `data` variable for all exercises. You can save to whichever varia
 ```
 
 #### Select the 1st, second and 5th columns
+
 ```{r}
 
 ```
 
 #### Select everything but the second and third column
+
 ```{r}
 
 ```
 
-#### Extra challenge: you can select a range of numbers using the <first>:<last> notation. 
+#### Extra challenge: you can select a range of numbers using the <first>:<last> notation.
 
 For example 1:5, is the same as c(1,2,3,4,5). Using this, select the columns 1-4 and 7-9
 
@@ -102,51 +113,63 @@ For example 1:5, is the same as c(1,2,3,4,5). Using this, select the columns 1-4
 # Filtering rows - filter()
 
 ## Boolean statement
+
 ```{r}
 myData <- data |> filter(acres_affected < 100)
 
 # Display relevant columns
 myData |> select(current_name, acres_affected)
 ```
-_Filter all rows with less than 100 affected acres_
 
-## Multiple boolean statements with _and_ 
+*Filter all rows with less than 100 affected acres*
+
+## Multiple boolean statements with *and*
+
 ```{r}
 myData <- data |> filter(acres_affected < 100 & states == "Florida")
 
 # Display relevant columns
 myData |> select(acres_affected, states)
 ```
-_Filter all rows with less than 100 acres affected in Florida_
 
-## Multiple boolean statements with _or_
+*Filter all rows with less than 100 acres affected in Florida*
+
+## Multiple boolean statements with *or*
+
 ```{r}
 myData <- data |> filter(acres_affected < 100 | acres_affected > 1000000)
 
 # Display relevant columns
 myData |> select(current_name, acres_affected)
 ```
-_Filter all rows with less than 100 or more than 1,000,000 affected acres_
+
+*Filter all rows with less than 100 or more than 1,000,000 affected acres*
 
 ### Try it yourself
 
 #### Filter out all rows from the `data` dataframe from the year 2016 onwards
+
 ```{r}
 
 ```
-_The result should have 13 rows_
 
-#### Filter out all data from _Pinnacles National Park_ before 1950
+*The result should have 13 rows*
+
+#### Filter out all data from *Pinnacles National Park* before 1950
+
 ```{r}
 
 ```
-_The result should have 6 rows_
 
-####  Get all rows with more than 5000 affected acres or after the year 2016
+*The result should have 6 rows*
+
+#### Get all rows with more than 5000 affected acres or after the year 2016
+
 ```{r}
 
 ```
-_The result should have 13 rows_
+
+*The result should have 13 rows*
 
 # Changing columns - mutate()
 
@@ -158,7 +181,8 @@ myData = data |> mutate(years_protected = 2024 - year)
 # Display relevant columns
 myData |> select(year, years_protected)
 ```
-_Calculate the number of years the land has been protected in 2024_
+
+*Calculate the number of years the land has been protected in 2024*
 
 ## Update existing column
 
@@ -168,15 +192,19 @@ myData = data |> mutate(acres_affected = ceiling(acres_affected))
 # Display relevant columns
 myData |> select(current_name, acres_affected)
 ```
-_Round up the acres to the nearest acre_
+
+*Round up the acres to the nearest acre*
 
 ### Try it yourself
 
 #### Create a new column that stores a boolean value (TRUE / FALSE) to indicate if the number of acres affected is larger than 1000
+
 ```{r}
 
 ```
+
 #### Use the `toupper()` function to change all state names to be written in capital letters (update the states column)
+
 ```{r}
 
 ```
@@ -184,25 +212,32 @@ _Round up the acres to the nearest acre_
 # Summarise data - summarise()
 
 ## Single row
+
 ```{r}
 data |> summarise(mean_acres = mean(acres_affected), sd_acres = sd(acres_affected))
 ```
-_Summarise the data to show the mean and standard deviation of the affected acres across the whole dataset_
+
+*Summarise the data to show the mean and standard deviation of the affected acres across the whole dataset*
 
 ## By group
+
 ```{r}
 data |> group_by(states) |> 
   summarise(mean_acres = mean(acres_affected), sd_acres = sd(acres_affected))
 ```
-_Get the mean and standard deviation of the affected acres by state_
+
+*Get the mean and standard deviation of the affected acres by state*
 
 ### Try it yourself
 
 #### Get the minimum `min()` and maximum `max()` amount of acres affected across the whole table
+
 ```{r}
 
 ```
+
 #### Do the same thing but now by year
+
 ```{r}
 
 ```
