--- a/part2_df_manipulation/part2_intro.Rmd
+++ b/part2_df_manipulation/part2_intro.Rmd
@@ -87,19 +87,19 @@ glimpse(myData)
 #### Select the current agency and the the number of acres affected from the dataset
 
 ```{r}
-
+myData <- data |> select(current_agency, acres_affected)
 ```
 
 #### Select the 1st, second and 5th columns
 
 ```{r}
-
+myData <- data |> select(1,2,5)
 ```
 
 #### Select everything but the second and third column
 
 ```{r}
-
+myData <- data |> select(-c(2,3))
 ```
 
 #### Extra challenge: you can select a range of numbers using the <first>:<last> notation.
@@ -107,7 +107,7 @@ glimpse(myData)
 For example 1:5, is the same as c(1,2,3,4,5). Using this, select the columns 1-4 and 7-9
 
 ```{r}
-
+myData <- data |> select(1:4, 7:9)
 ```
 
 # Filtering rows - filter()
@@ -150,7 +150,7 @@ myData |> select(current_name, acres_affected)
 #### Filter out all rows from the `data` dataframe from the year 2016 onwards
 
 ```{r}
-
+myData <- data |> filter(year >= 2016)
 ```
 
 *The result should have 13 rows*
@@ -158,18 +158,18 @@ myData |> select(current_name, acres_affected)
 #### Filter out all data from *Pinnacles National Park* before 1950
 
 ```{r}
-
+myData <- data |> filter(current_name == "Pinnacles National Park" & year < 1950)
 ```
 
 *The result should have 6 rows*
 
-#### Get all rows with more than 5000 affected acres or after the year 2016
+#### Get all rows with more than 5000 affected acres or after the year 2000
 
 ```{r}
-
+myData <- data |> filter(acres_affected > 5000 | year > 2000) 
 ```
 
-*The result should have 13 rows*
+*The result should have 122 rows*
 
 # Changing columns - mutate()
 
@@ -197,16 +197,16 @@ myData |> select(current_name, acres_affected)
 
 ### Try it yourself
 
-#### Create a new column that stores a boolean value (TRUE / FALSE) to indicate if the number of acres affected is larger than 1000
+#### Create a new column `large` that stores the boolean value (TRUE / FALSE) to indicate if the number of acres affected is larger than 1000
 
 ```{r}
-
+myData <- data |> mutate(large = acres_affected > 1000)
 ```
 
 #### Use the `toupper()` function to change all state names to be written in capital letters (update the states column)
 
 ```{r}
-
+myData <- data |> mutate(states = toupper(states))
 ```
 
 # Summarise data - summarise()
@@ -236,39 +236,47 @@ data |> group_by(states) |>
 #### Get the minimum `min()` and maximum `max()` amount of acres affected across the whole table
 
 ```{r}
-
+myData <- data |> 
+  summarise(min = min(acres_affected), max = max(acres_affected)) |>
+  ungroup()
 ```
 
 #### Do the same thing but now by year
 
 ```{r}
-
+myData <- data |> 
+  group_by(year) |>
+  summarise(min = min(acres_affected), max = max(acres_affected)) |>
+  ungroup()
 ```
 
 # Putting it all together
 
 In this part you will combine the new things you've learned (selecting, filtering, mutating and summarising) into a more comprehensive analysis
 
+#### Use the `read_excel()` function to load the *antiquities_act.xlsx* file into a new variable called `newData`
+
 ```{r}
-data <- read_excel("antiquities_act.xlsx")
+newData <- read_excel("antiquities_act.xlsx")
 ```
 
-#### Select the name, state, action, year and affected acres columns from the data and put them into a new variable called `analysis` 
+#### Select the name, state, action, year and affected acres columns from the data and put them into a new variable called `analysis`
 
 ```{r}
-analysis <- data |> select(current_name, states, action, year, acres_affected)
+analysis <- newData |> select(current_name, states, action, year, acres_affected)
 ```
 
 #### We'll only focus on the data when and area was enlarged before the year 2000, so update the `analysis` variable to only contain those rows
+
 ```{r}
 analysis <- analysis |> filter(action == "Enlarged" & year < 2000)
 ```
 
 #### Generate a summary by state and save it to a variable called `result` with the following statistics:
 
-- Total acres of the area enlarged
-- Time span (difference between first and last year enlargement happened)
-- Number of times and area was enlarged (look up the `n()` function for details)
+-   Total acres of the area enlarged
+-   Time span (difference between first and last year enlargement happened)
+-   Number of times and area was enlarged (look up the `n()` function for details)
 
 ```{r}
 result <- analysis |> group_by(states) |> 
@@ -281,7 +289,7 @@ result <- analysis |> group_by(states) |>
 ```
 
 #### Add a column `large` to these results indicating whether the total area is larger than 100,000 acres
+
 ```{r}
 result |> mutate(large = area >= 100000)
 ```
-
